--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,13 +22,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build
-        # Install and build project
       run: |
           make install
-        # Add environment variables
       env:
           CI: true
     - name: Run linter
-        # Run Linter
       run: |
           make lint
+    - name: Run test
+      run: |
+          make test
