--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,11 @@ jobs:
     - name: Run linter
       run: |
           make lint
-    - name: Run test
-      run: |
-          make test
+    - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.4
+        # Add Code Climate secret key
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_SECRET }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
