--- a/__fixtures__/yaml/file2.yaml
+++ b/__fixtures__/yaml/file2.yaml
@@ -1,4 +1,8 @@
 ---
-timeout: 20
-verbose: true
 host: hexlet.io
+timeout: 50
+proxy: 123.234.53.22
+follow: false
+server2:
+  host: hexlet.io
+  proxy: 123.234.53.22
